--- a/.github/workflows/DeploySurge.yml
+++ b/.github/workflows/DeploySurge.yml
@@ -13,27 +13,27 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
-# The type of runner that the job will run on
-  runs-on: ubuntu-latest
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
 
-# Steps represent a sequence of tasks that will be executed as part of the job
-  
-# Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-  uses: actions/checkout@v2
+    # Runs a single command using the runners shell
+    - name: Installing Node
+      uses: actions/setup-node@v2-beta
+      with:
+        node-version: '12'
 
-# Runs a single command using the runners shell
-  -name: Installing Node
-  -uses: actions/setup-node@v2-beta
-  with: 
-       node-version:'12'
+    # Step to Install Surge
+    - name: Installing Surge
+      run: npm install --global surge
 
-# Step to install and run surge
-  name: install Surge
-  run: npm install --global surge
-        
-# Deploy App to surge
-  name: Deploying project to Surge
-  run: Surge ./ NasirSherAli.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+    # Deploy App to Surge
+    - name: Deploying Project to Surge
+      run: surge ./ NasirSherAli.surge.sh --token ${{ secrets.SURGE_TOKEN }}
       
       
